--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
         <div class="container text-center">
             <h2 class="pt-5 pb-5 display-4 fw-bold text-body-emphasis subtitles" >My Recent Work:</h2>
             <div class="row my-projects">
-                <div class="col" id="col-1">
+                <div class="col-xl-4 col-sm-12" id="col-1">
                     <div class="card" style="width: 18rem;">
                       <img src="static/images/movie-project.png" class="card-img-top" alt="movie-project picture">
                       <div class="card-body">
@@ -98,7 +98,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-xl-4 col-sm-12">
                     <div class="card" style="width: 18rem;">
                       <img src="static/images/blog-project.png" class="card-img-top" alt="blog-project picture">
                       <div class="card-body">
@@ -112,7 +112,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col" id="col-3">
+                <div class="col-xl-4 col-sm-12" id="col-3">
                     <div class="card" style="width: 18rem;">
                       <img src="static/images/data-entry-project.png" class="card-img-top" alt="data-entry-project picture">
                       <div class="card-body">
