--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <head>
     <title>Matan Ohana | Python Developer</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo.ico') }}">
+    <link rel="icon" href="{{ url_for('static', filename='images/logo.ico') }}" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         {% block styles %}
